# pokedex

./: main.py  pyproject.toml
output/moves/: headbutt.txt  tackle.txt  take-down.txt
pokedex/: gui.py  pokeapi.py
tests/: test_pokedex.py
